# agent

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix
schema/: nexus.schema  sema.schema
src/: client.rs  config.rs  engine.rs  error.rs  interaction_log.rs  lib.rs  provider.rs  registry.rs  schema_daemon.rs
src/schema/: daemon.rs  nexus.rs  sema.rs
tests/: configuration_writer.rs  fixture_round_trip.rs
